--- a/src/main/resources/com/matteotocci/app/DettagliAlimento.fxml
+++ b/src/main/resources/com/matteotocci/app/DettagliAlimento.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
@@ -8,30 +7,40 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.DettagliAlimentoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="485.0" prefWidth="600.0" styleClass="details-container" stylesheets="@css/DettaglioAlimento-Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.DettagliAlimentoController">
+
    <children>
-      <HBox layoutX="134.0" layoutY="116.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox styleClass="details-hbox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fx:id="immagineGrande" fitWidth="300.0" preserveRatio="true" />
-            <VBox alignment="CENTER" prefHeight="400.0" prefWidth="308.0" spacing="10" style="-fx-padding: 20; -fx-background-color: white">
+            <!-- Sezione Immagine -->
+            <VBox prefWidth="300.0" styleClass="image-section">
                <children>
-                  <Label fx:id="nomeLabel" style="-fx-font-size: 18; -fx-font-weight: bold" />
-                  <Label fx:id="kcalLabel" />
-                  <Label fx:id="proteineLabel" />
-                  <Label fx:id="carboidratiLabel" />
-                  <Label fx:id="grassiLabel" />
-                  <Label fx:id="grassiSatLabel" />
-                  <Label fx:id="saleLabel" />
-                  <Label fx:id="fibreLabel" />
-                  <Label fx:id="zuccheriLabel" />
-                  <HBox alignment="CENTER" prefHeight="61.0" prefWidth="260.0">
+                  <ImageView fx:id="immagineGrande" fitWidth="250.0" preserveRatio="true" styleClass="food-image" />
+               </children>
+            </VBox>
+
+            <!-- Sezione Dettagli -->
+            <VBox prefWidth="300.0" styleClass="details-section">
+               <children>
+                  <Label fx:id="nomeLabel" styleClass="food-title" />
+
+                  <VBox styleClass="nutrition-container">
                      <children>
-                        <Button onAction="#chiudiFinestra" text="Chiudi" />
-                        <Button fx:id="BottoneElimina" onAction="#handleEliminaAlimento" text="Elimina" visible="false">
-                           <HBox.margin>
-                              <Insets left="100.0" />
-                           </HBox.margin>
-                        </Button>
+                        <Label fx:id="kcalLabel" styleClass="nutrition-label,calories" />
+                        <Label fx:id="proteineLabel" styleClass="nutrition-label,primary" />
+                        <Label fx:id="carboidratiLabel" styleClass="nutrition-label,primary" />
+                        <Label fx:id="grassiLabel" styleClass="nutrition-label,primary" />
+                        <Label fx:id="grassiSatLabel" styleClass="nutrition-label" />
+                        <Label fx:id="saleLabel" styleClass="nutrition-label" />
+                        <Label fx:id="fibreLabel" styleClass="nutrition-label" />
+                        <Label fx:id="zuccheriLabel" styleClass="nutrition-label" />
+                     </children>
+                  </VBox>
+
+                  <HBox styleClass="button-container">
+                     <children>
+                        <Button onAction="#chiudiFinestra" styleClass="primary-button" text="Chiudi" />
+                        <Button fx:id="BottoneElimina" onAction="#handleEliminaAlimento" styleClass="secondary-button" text="Elimina" visible="false" />
                      </children>
                   </HBox>
                </children>
