--- a/src/main/resources/com/matteotocci/app/PrimaPagina.fxml
+++ b/src/main/resources/com/matteotocci/app/PrimaPagina.fxml
@@ -37,13 +37,13 @@
                         <!-- Logo con effetto ombra -->
                         <ImageView fitHeight="200.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@immagini/logo.jpg" />
+                              <Image url="@immagini/logo.png" />
                            </image>
                            <styleClass>
                               <String fx:value="image-view" />
                            </styleClass>
                            <VBox.margin>
-                              <Insets bottom="20.0" top="20.0" />
+                              <Insets bottom="5.0" top="20.0" />
                            </VBox.margin>
                         </ImageView>
 
@@ -64,7 +64,7 @@
                         <!-- Campo Password -->
                         <PasswordField fx:id="loginPasswordField" prefHeight="45.0" prefWidth="320.0" promptText="Inserisci la tua password">
                            <VBox.margin>
-                              <Insets bottom="25.0" />
+                              <Insets bottom="20.0" />
                            </VBox.margin>
                         </PasswordField>
 
@@ -86,7 +86,7 @@
                         <!-- Logo -->
                         <ImageView fitHeight="180.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@immagini/logo.jpg" />
+                              <Image url="@immagini/logo.png" />
                            </image>
                            <styleClass>
                               <String fx:value="image-view" />
@@ -132,7 +132,7 @@
                         <!-- Campo Password -->
                         <PasswordField fx:id="passwordField" prefHeight="45.0" prefWidth="320.0" promptText="Password">
                            <VBox.margin>
-                              <Insets bottom="15.0" />
+                              <Insets bottom="10.0" />
                            </VBox.margin>
                         </PasswordField>
 
@@ -141,10 +141,13 @@
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
                         </Button>
                      </children>
                      <padding>
-                        <Insets bottom="20.0" left="60.0" right="60.0" top="20.0" />
+                        <Insets bottom="25.0" left="60.0" right="60.0" top="20.0" />
                      </padding>
                   </VBox>
                </children>
