--- a/src/main/resources/com/matteotocci/app/VisualizzaDieta.fxml
+++ b/src/main/resources/com/matteotocci/app/VisualizzaDieta.fxml
@@ -12,55 +12,81 @@
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.matteotocci.app.controller.VisualizzaDieta"
-            prefHeight="650.0" prefWidth="850.0"> <children>
-    <VBox alignment="TOP_CENTER" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-        </padding>
-        <children>
-            <Label fx:id="labelNomeDieta" text="Nome della Dieta" style="-fx-font-size: 24px; -fx-font-weight: bold;">
-                <VBox.margin>
-                    <Insets bottom="5.0" />
-                </VBox.margin>
-            </Label>
+            prefHeight="650.0" prefWidth="850.0"
+            styleClass="root"
+            stylesheets="@css/VisualizzaDieta-Style.css">
+    <children>
+        <VBox alignment="TOP_CENTER" spacing="15.0"
+              styleClass="main-container"
+              AnchorPane.bottomAnchor="0.0"
+              AnchorPane.leftAnchor="0.0"
+              AnchorPane.rightAnchor="0.0"
+              AnchorPane.topAnchor="0.0">
+            <padding>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </padding>
+            <children>
+                <Label fx:id="labelNomeDieta"
+                       text="Nome della Dieta"
+                       styleClass="diet-title">
+                    <VBox.margin>
+                        <Insets bottom="5.0" />
+                    </VBox.margin>
+                </Label>
 
-            <HBox alignment="CENTER" spacing="40.0">
-                <children>
-                    <HBox alignment="CENTER_LEFT" spacing="5.0">
-                        <children>
-                            <Label text="Data Inizio:" style="-fx-font-weight: bold;" />
-                            <Label fx:id="labelDataInizio" text="DD/MM/YYYY" />
-                        </children>
-                    </HBox>
-                    <HBox alignment="CENTER_LEFT" spacing="5.0">
-                        <children>
-                            <Label text="Data Fine:" style="-fx-font-weight: bold;" />
-                            <Label fx:id="labelDataFine" text="DD/MM/YYYY" />
-                        </children>
-                    </HBox>
-                </children>
-                <VBox.margin>
-                    <Insets bottom="10.0" />
-                </VBox.margin>
-            </HBox>
+                <HBox alignment="CENTER" spacing="40.0"
+                      styleClass="date-info-container">
+                    <children>
+                        <HBox alignment="CENTER_LEFT" spacing="5.0">
+                            <children>
+                                <Label text="Data Inizio:"
+                                       styleClass="date-label-bold" />
+                                <Label fx:id="labelDataInizio"
+                                       text="DD/MM/YYYY"
+                                       styleClass="date-label-value" />
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" spacing="5.0">
+                            <children>
+                                <Label text="Data Fine:"
+                                       styleClass="date-label-bold" />
+                                <Label fx:id="labelDataFine"
+                                       text="DD/MM/YYYY"
+                                       styleClass="date-label-value" />
+                            </children>
+                        </HBox>
+                    </children>
+                    <VBox.margin>
+                        <Insets bottom="10.0" />
+                    </VBox.margin>
+                </HBox>
 
-            <Separator /> <Label text="Piani Giornalieri" style="-fx-font-size: 18px; -fx-font-weight: bold;">
-            <VBox.margin>
-                <Insets bottom="10.0" top="10.0" />
-            </VBox.margin>
-        </Label>
+                <Separator styleClass="separator" />
 
-            <ScrollPane fitToWidth="true" VBox.vgrow="ALWAYS" hbarPolicy="NEVER">
-                <content>
-                    <VBox fx:id="contenitoreGiorni" spacing="25.0" alignment="TOP_CENTER">
-                        <padding>
-                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                        </padding>
-                    </VBox>
-                </content>
-            </ScrollPane>
+                <Label text="Piani Giornalieri"
+                       styleClass="section-title">
+                    <VBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                    </VBox.margin>
+                </Label>
 
-        </children>
-    </VBox>
-</children>
+                <ScrollPane fitToWidth="true"
+                            VBox.vgrow="ALWAYS"
+                            hbarPolicy="NEVER"
+                            styleClass="scroll-pane">
+                    <content>
+                        <VBox fx:id="contenitoreGiorni"
+                              spacing="25.0"
+                              alignment="TOP_CENTER"
+                              styleClass="days-container">
+                            <padding>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </padding>
+                        </VBox>
+                    </content>
+                </ScrollPane>
+
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
