--- a/src/main/resources/com/matteotocci/app/AggiungiRicetta.fxml
+++ b/src/main/resources/com/matteotocci/app/AggiungiRicetta.fxml
@@ -11,170 +11,109 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="500.0" prefWidth="872.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.AggiungiRicetteController">
+<AnchorPane maxHeight="640.0" maxWidth="1000.0" prefHeight="640.0" prefWidth="1000.0" stylesheets="@css/AggiungiRicetta-Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.AggiungiRicetteController">
     <children>
-      <HBox prefHeight="500.0" prefWidth="872.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <VBox fillWidth="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="546.0" spacing="10.0">
-               <children>
-                  <HBox prefHeight="38.0" prefWidth="549.0">
-                     <children>
-                          <TextField fx:id="nomeRicetta" prefHeight="38.0" prefWidth="416.0" promptText="Nome nuova ricetta...">
-                           <HBox.margin>
-                              <Insets />
-                           </HBox.margin>
-                        </TextField>
-                        <ComboBox fx:id="categoriaRicetta" prefHeight="38.0" prefWidth="139.0" promptText="Categoria ricetta" />
-                     </children>
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </HBox>
-                   <HBox prefHeight="40.0" prefWidth="546.0">
-                       <children>
-
-                           <TextField fx:id="cercaAlimento" prefHeight="40.0" prefWidth="247.0" promptText="Cerca alimento.." />
-                           <Button fx:id="bottoneCerca" onAction="#handleCercaAlimento" prefHeight="40.0" prefWidth="106.0" text="Cerca" />
-                           <ComboBox fx:id="categoriaComboBox" prefHeight="40.0" prefWidth="129.0" promptText="Categoria" />
-                           <CheckBox fx:id="mieiAlimentiCheckBox" prefHeight="40.0" prefWidth="162.0" text=" Solo i miei alimenti">
-                               <padding>
-                                   <Insets left="5.0" />
-                               </padding></CheckBox>
-
-                       </children>
-                   </HBox>
-                    <TableView fx:id="tableView" editable="true" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="342.0" prefWidth="546.0">
-                        <columns>
-                            <TableColumn fx:id="immagineCol" text="Immagine" />
-                            <TableColumn fx:id="nomeCol" prefWidth="141" text="Nome" />
-                            <TableColumn fx:id="brandCol" text="Brand" />
-                            <TableColumn fx:id="calorieCol" prefWidth="80" text="Calorie" />
-                            <TableColumn fx:id="proteineCol" prefWidth="80" text="Proteine" />
-                            <TableColumn fx:id="carboidratiCol" prefWidth="80" text="Carboidrati" />
-                            <TableColumn fx:id="grassiCol" prefWidth="80" text="Grassi" />
-                            <TableColumn fx:id="grassiSatCol" prefWidth="80" text="Grassi Saturi" />
-                            <TableColumn fx:id="saleCol" prefWidth="80" text="Sale" />
-                            <TableColumn fx:id="fibreCol" prefWidth="80" text="Fibre" />
-                            <TableColumn fx:id="zuccheriCol" prefWidth="80" text="Zuccheri" />
-                        </columns>
-                    </TableView>
-                  <HBox prefHeight="26.0" prefWidth="548.0">
-                     <children>
-                  
-                          <!-- Quantità Alimento (per aggiungere più alimenti) -->
-                          <Label prefHeight="26.0" prefWidth="69.0" text="Quantità (g):" />
-                          <TextField fx:id="quantitaField" prefWidth="100" />
-                        <Region prefHeight="26.0" prefWidth="18.0" />
-                  
-                          <!-- Pulsante per aggiungere alimento alla ricetta -->
-                          <Button fx:id="aggiungiAlimento" alignment="CENTER" onAction="#handleAggiungiAlimento" text="Aggiungi Alimento" HBox.hgrow="NEVER" />
-                        <Region prefHeight="26.0" prefWidth="77.0" />
-                  
-                                <!-- Pulsante Salva Ricetta -->
-                          <Button fx:id="salvaRicetta" onAction="#handleSalvaRicetta" prefHeight="9.0" prefWidth="83.0" text="Salva Ricetta" />
-                        <Region prefHeight="26.0" prefWidth="22.0" />
-                  
-                          <!-- Pulsante Annulla -->
-                          <Button fx:id="annulla" onAction="#handleAnnulla" text="Annulla" />
-                     </children>
-                  </HBox>
-               </children>
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
-            </VBox>
-            <VBox prefHeight="500.0" prefWidth="331.0">
-               <children>
-            
-                          <!-- Calcoli nutrizionali -->
-                    <Label alignment="TOP_CENTER" prefHeight="26.0" prefWidth="318.0" style="-fx-font-size: 16px; -fx-font-weight: bold;" text="Valori Nutrizionali Totali">
-                     <VBox.margin>
-                        <Insets top="20.0" />
-                     </VBox.margin></Label>
-                  <HBox prefHeight="18.0" prefWidth="212.0">
-                     <children>
-                        <Label text="Calorie:">
-                           <HBox.margin>
-                              <Insets left="40.0" />
-                           </HBox.margin></Label>
-                        <Label fx:id="calorieTotaliLabel" prefHeight="18.0" prefWidth="50.0" />
-                        <Region prefHeight="18.0" prefWidth="25.0" />
-                        <Label prefHeight="18.0" prefWidth="75.0" text="Carboidrati:" />
-                        <Label fx:id="carboidratiTotaliLabel" prefHeight="18.0" prefWidth="51.0" />
-                     </children>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <HBox prefHeight="18.0" prefWidth="212.0">
-                     <children>
-                        <Label prefHeight="18.0" prefWidth="37.0" text="Grassi:">
-                           <HBox.margin>
-                              <Insets left="40.0" />
-                           </HBox.margin></Label>
-                        <Label fx:id="grassiTotaliLabel" prefHeight="18.0" prefWidth="50.0" />
-                        <Region prefHeight="18.0" prefWidth="27.0" />
-                        <Label prefHeight="18.0" prefWidth="70.0" text="Proteine:" />
-                        <Label fx:id="proteineTotaliLabel" prefHeight="18.0" prefWidth="50.0" />
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="18.0" prefWidth="212.0">
-                     <children>
-                        <Label prefHeight="11.0" prefWidth="71.0" text="Grassi Saturi:" />
-                        <Label fx:id="grassiSaturiTotaliLabel" prefHeight="18.0" prefWidth="32.0" />
-                        <Region prefHeight="18.0" prefWidth="11.0" />
-                        <Label text="Sale:" />
-                        <Label fx:id="saleTotaliLabel" prefHeight="18.0" prefWidth="94.0" />
-                     </children>
-                     <VBox.margin>
-                        <Insets left="40.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <HBox prefHeight="18.0" prefWidth="212.0">
-                     <children>
-                        <Label text="Fibre:" />
-                        <Label fx:id="fibreTotaliLabel" prefHeight="18.0" prefWidth="64.0" />
-                        <Region prefHeight="18.0" prefWidth="20.0" />
-                        <Label text="Zuccheri:" />
-                        <Label fx:id="zuccheriTotaliLabel" prefHeight="18.0" prefWidth="72.0" />
-                     </children>
-                     <VBox.margin>
-                        <Insets left="40.0" />
-                     </VBox.margin>
-                  </HBox>
-                   <Label prefHeight="18.0" prefWidth="294.0" style="-fx-font-weight: bold;" text="Ingredienti aggiunti:">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin></Label>
-                   <TableView fx:id="ingredientiTable" prefHeight="169.0" prefWidth="280.0">
-                       <columns>
-                           <TableColumn fx:id="ingredienteNomeCol" prefWidth="150" text="Nome" />
-                           <TableColumn fx:id="quantitaCol" prefWidth="100" text="Quantità (g)" />
-                           <TableColumn fx:id="azioniCol" prefWidth="80" text="Azioni" />
-                       </columns>
-                     <VBox.margin>
-                        <Insets right="15.0" />
-                     </VBox.margin>
-                   </TableView>
-                  <TextArea fx:id="descrizioneRicetta" prefHeight="154.0" prefWidth="295.0" promptText="Descrizione ricetta..">
-                     <padding>
-                        <Insets right="15.0" />
-                     </padding>
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </TextArea>
-
-               </children>
-               <HBox.margin>
-                  <Insets left="15.0" />
-               </HBox.margin>
-
-            </VBox>
-         </children>
-      </HBox>
+        <HBox prefHeight="640.0" prefWidth="1000.0" spacing="15.0" styleClass="main-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <VBox fillWidth="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="610.0" prefWidth="580.0" spacing="15.0" styleClass="left-panel">
+                    <children>
+                        <HBox prefHeight="40.0" prefWidth="540.0" spacing="10.0" styleClass="recipe-header">
+                            <children>
+                                <TextField fx:id="nomeRicetta" prefHeight="42.0" prefWidth="376.0" promptText="Nome nuova ricetta..." />
+                                <ComboBox fx:id="categoriaRicetta" prefHeight="50.0" prefWidth="225.0" promptText="Categoria ricetta" />
+                            </children>
+                        </HBox>
+                        <HBox prefHeight="40.0" prefWidth="540.0" spacing="10.0" styleClass="search-row">
+                            <children>
+                                <TextField fx:id="cercaAlimento" prefHeight="42.0" prefWidth="147.0" promptText="Cerca alimento.." />
+                                <Button fx:id="bottoneCerca" onAction="#handleCercaAlimento" prefHeight="40.0" prefWidth="93.0" text="Cerca" />
+                                <ComboBox fx:id="categoriaComboBox" prefHeight="50.0" prefWidth="116.0" promptText="Categoria" />
+                                <CheckBox fx:id="mieiAlimentiCheckBox" prefHeight="40.0" prefWidth="166.0" text="Solo i miei alimenti">
+                                    <padding>
+                                        <Insets left="5.0" />
+                                    </padding>
+                                </CheckBox>
+                            </children>
+                        </HBox>
+                        <TableView fx:id="tableView" editable="true" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="320.0" prefWidth="540.0" styleClass="compact-table">
+                            <columns>
+                                <TableColumn fx:id="immagineCol" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" text="Img" />
+                                <TableColumn fx:id="nomeCol" prefWidth="120.0" text="Nome" />
+                                <TableColumn fx:id="brandCol" prefWidth="80.0" text="Brand" />
+                                <TableColumn fx:id="calorieCol" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" text="Cal" />
+                                <TableColumn fx:id="proteineCol" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" text="Prot" />
+                                <TableColumn fx:id="carboidratiCol" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" text="Carb" />
+                                <TableColumn fx:id="grassiCol" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" text="Grassi" />
+                                <TableColumn fx:id="grassiSatCol" maxWidth="70.0" minWidth="70.0" prefWidth="70.0" text="G.Sat" />
+                                <TableColumn fx:id="saleCol" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" text="Sale" />
+                                <TableColumn fx:id="fibreCol" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" text="Fibre" />
+                                <TableColumn fx:id="zuccheriCol" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" text="Zucch" />
+                            </columns>
+                        </TableView>
+                        <HBox prefHeight="40.0" prefWidth="540.0" spacing="15.0" styleClass="action-row">
+                            <children>
+                                <Label prefHeight="36.0" prefWidth="93.0" styleClass="action-label" text="Quantità (g):" />
+                                <TextField fx:id="quantitaField" prefHeight="40.0" prefWidth="80.0" />
+                                <Button fx:id="aggiungiAlimento" alignment="CENTER" onAction="#handleAggiungiAlimento" prefHeight="36.0" prefWidth="110.0" text="Aggiungi" />
+                                <Button fx:id="salvaRicetta" onAction="#handleSalvaRicetta" prefHeight="36.0" prefWidth="110.0" text="Salva" />
+                                <Button fx:id="annulla" onAction="#handleAnnulla" prefHeight="36.0" prefWidth="110.0" text="Annulla" />
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
+                <VBox prefHeight="610.0" prefWidth="390.0" spacing="15.0" styleClass="right-panel">
+                    <children>
+                        <Label alignment="TOP_CENTER" prefHeight="30.0" prefWidth="350.0" styleClass="nutrition-title" text="Valori Nutrizionali Totali" />
+                        <VBox spacing="8.0">
+                            <children>
+                                <HBox prefHeight="25.0" prefWidth="350.0" spacing="15.0" styleClass="nutrition-row">
+                                    <children>
+                                        <Label prefWidth="70.0" styleClass="nutrition-label" text="Calorie:" />
+                                        <Label fx:id="calorieTotaliLabel" prefWidth="60.0" styleClass="nutrition-value" />
+                                        <Label prefWidth="80.0" styleClass="nutrition-label" text="Carboidrati:" />
+                                        <Label fx:id="carboidratiTotaliLabel" prefWidth="60.0" styleClass="nutrition-value" />
+                                    </children>
+                                </HBox>
+                                <HBox prefHeight="25.0" prefWidth="350.0" spacing="15.0" styleClass="nutrition-row">
+                                    <children>
+                                        <Label prefWidth="70.0" styleClass="nutrition-label" text="Grassi:" />
+                                        <Label fx:id="grassiTotaliLabel" prefWidth="60.0" styleClass="nutrition-value" />
+                                        <Label prefWidth="80.0" styleClass="nutrition-label" text="Proteine:" />
+                                        <Label fx:id="proteineTotaliLabel" prefWidth="60.0" styleClass="nutrition-value" />
+                                    </children>
+                                </HBox>
+                                <HBox prefHeight="25.0" prefWidth="350.0" spacing="15.0" styleClass="nutrition-row">
+                                    <children>
+                                        <Label prefWidth="70.0" styleClass="nutrition-label" text="G.Saturi:" />
+                                        <Label fx:id="grassiSaturiTotaliLabel" prefWidth="60.0" styleClass="nutrition-value" />
+                                        <Label prefWidth="80.0" styleClass="nutrition-label" text="Sale:" />
+                                        <Label fx:id="saleTotaliLabel" prefWidth="60.0" styleClass="nutrition-value" />
+                                    </children>
+                                </HBox>
+                                <HBox prefHeight="25.0" prefWidth="350.0" spacing="15.0" styleClass="nutrition-row">
+                                    <children>
+                                        <Label prefWidth="70.0" styleClass="nutrition-label" text="Fibre:" />
+                                        <Label fx:id="fibreTotaliLabel" prefWidth="60.0" styleClass="nutrition-value" />
+                                        <Label prefWidth="80.0" styleClass="nutrition-label" text="Zuccheri:" />
+                                        <Label fx:id="zuccheriTotaliLabel" prefWidth="60.0" styleClass="nutrition-value" />
+                                    </children>
+                                </HBox>
+                            </children>
+                        </VBox>
+                        <Label prefHeight="20.0" prefWidth="350.0" styleClass="ingredients-title" text="Ingredienti aggiunti:" />
+                        <TableView fx:id="ingredientiTable" prefHeight="180.0" prefWidth="350.0">
+                            <columns>
+                                <TableColumn fx:id="ingredienteNomeCol" prefWidth="180.0" text="Nome" />
+                                <TableColumn fx:id="quantitaCol" prefWidth="100.0" text="Quantità (g)" />
+                                <TableColumn fx:id="azioniCol" prefWidth="70.0" text="Azioni" />
+                            </columns>
+                        </TableView>
+                        <TextArea fx:id="descrizioneRicetta" prefHeight="120.0" prefWidth="350.0" promptText="Descrizione ricetta.." wrapText="true" />
+                    </children>
+                </VBox>
+            </children>
+        </HBox>
     </children>
 </AnchorPane>
